--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
+[submodule "lib/uni-v3-lib.git"]
+	path = lib/uni-v3-lib.git
+	url = https://github.com/Aperture-Finance/uni-v3-lib.git
