--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,8 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+evm_version = "shanghai"
 
+[rpc_endpoints]
+sepolia = "https://sepolia.infura.io/v3/e7afabd980144381a2fd513965e5c388"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
