--- a/.gitmodules
+++ b/.gitmodules
@@ -7,18 +7,12 @@
 [submodule "lib/openzeppelin-foundry-upgrades"]
 	path = lib/openzeppelin-foundry-upgrades
 	url = https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades
-[submodule "lib/openzeppelin-contracts"]
-	path = lib/openzeppelin-contracts
-	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/openzeppelin-contracts-upgradeable"]
 	path = lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
-[submodule "lib/uni-v3-lib.git"]
-	path = lib/uni-v3-lib.git
-	url = https://github.com/Aperture-Finance/uni-v3-lib.git
 [submodule "lib/solmate"]
 	path = lib/solmate
 	url = https://github.com/transmissions11/solmate
@@ -33,3 +27,9 @@
 	path = lib/v3-core
 	url = https://github.com/uniswap/v3-core
 	branch = 0.8
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/Openzeppelin/openzeppelin-contracts
+[submodule "lib/uni-v3-lib"]
+	path = lib/uni-v3-lib
+	url = https://github.com/Aperture-Finance/uni-v3-lib
