--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 
 
 [rpc_endpoints]
+base_sepolia = "https://sepolia.base.org"
 sepolia = "https://sepolia.infura.io/v3/e7afabd980144381a2fd513965e5c388"
 local = "http://127.0.0.1:8545"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
